--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,26 @@
     <meta name="description" content="PT. Krakatau Samudera Solution" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta
+      name="google-signin-client_id"
+      content="724196601116-09dh3dgt03s774768c7dvhpdi2f4ovc4.apps.googleusercontent.com"
+    />
+    <meta name="google-signin-scope" content="https://www.googleapis.com/auth/analytics.readonly" />
     <title>PT. Krakatau Samudera Solution</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
+  <script src="https://apis.google.com/js/client:platform.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-243099276-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
+    }
+    gtag('js', new Date())
+
+    gtag('config', 'UA-243099276-1')
+  </script>
 </html>
